kubernetes/install.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: apptest

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nodeapp
  name: nodeapp
  namespace: apptest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodeapp
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: nodeapp
    spec:
      containers:
      - name: nodeapp
        image: m1:5000/rayshoo/nodeapp:1.0
        imagePullPolicy: Always
        resources: {}
        livenessProbe:
          httpGet:
            path: /live
            port: 3000
            httpHeaders:
            - name: livecheck
              value: nodeapp
          initialDelaySeconds: 3
          periodSeconds: 3
        readinessProbe:
          httpGet:
            path: /ready
            port: 3000
            httpHeaders:
            - name: readycheck
              value: nodeapp
          initialDelaySeconds: 3
          periodSeconds: 3
        volumeMounts:
        - name: cache-config
          mountPath: /root/app/config
      volumes:
      - name: cache-config
        configMap:
          name: cache

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nodeapp
  name: nodeapp
  namespace: apptest
spec:
  clusterIP: None
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: nodeapp

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx
  name: nginx
  namespace: apptest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  strategy: {}
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: m1:5000/rayshoo/nginx:1.0
        imagePullPolicy: Always
        resources: {}
        livenessProbe:
          httpGet:
            path: /live
            port: 5000
            httpHeaders:
            - name: livecheck
              value: nginx
          initialDelaySeconds: 3
          periodSeconds: 3
        volumeMounts:
        - name: appconfig
          mountPath: /etc/nginx/conf.d
      volumes:
      - name: appconfig
        configMap:
          name: appconfig

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx
  name: nginx
  namespace: apptest
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 5000
  - name: https
    port: 443
    protocol: TCP
    targetPort: 5000
  selector:
    app: nginx
  type: LoadBalancer

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apptest
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
  namespace: apptest
spec:
  rules:
  - http:
      paths:
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 80
